--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,22 @@ jobs:
       with:
         name: python-menu.exe
         path: D:\a\pythonmenugui\pythonmenugui\dist\pythonmenugui.exe
+    - name: release
+      uses: actions/create-release@v1
+      id: create_release
+      with:
+        draft: false
+        prerelease: false
+        release_name: Release ${{ github.ref }}
+        tag_name: ${{ github.ref }}
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+    - name: upload windows artifact
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: D:\a\pythonmenugui\pythonmenugui\dist\pythonmenugui.exe
+        asset_name: pythonmenugui.exe
+        asset_content_type: application/exe
