--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,18 +25,14 @@ jobs:
       with:
         name: python-menu.exe
         path: dist\pythonmenugui.exe
-    - name: Define tag
-      shell: bash
-      run: echo "::set-output name=tag::0.1.1"
-      id: get_tag
     - name: release
       uses: actions/create-release@v1
       id: create_release
       with:
         draft: false
         prerelease: false
-        tag_name: ${{ steps.get_tag.outputs.tag }}
-        release_name: Release ${{ steps.get_tag.outputs.tag }}
+        tag_name: 0.1.2
+        release_name: 0.1.2
       env:
         GITHUB_TOKEN: ${{ github.token }}
     - name: upload windows artifact
