--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         pip install -r requirements.txt
     - name: build with pyinstaller
       run: |
-        pyinstaller --onefile install_coops_python.py
+        pyinstaller --noconsole --onefile install_coops_python.py
     - uses: actions/upload-artifact@v2
       with:
         name: python-menu.exe
