--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
+        architecture: 'x32'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
