--- a/.github/workflows/nuitka.yml
+++ b/.github/workflows/nuitka.yml
@@ -1,4 +1,4 @@
-name: BuildInstallCoops
+name: BuildInstallCoopsNuitka
 on:
   workflow_dispatch:
     inputs:
@@ -11,23 +11,23 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.8
+    - name: Set up Python 3.9
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: 3.9
         architecture: 'x64'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller
         pip install -r requirements.txt
-    - name: build with pyinstaller
+        pip install nuitka
+    - name: build with nuitka
       run: |
-        python -m PyInstaller --onefile --noconsole --uac-admin install_coops_python.py
+        python -m nuitka --mingw64 --standalone --assume-yes-for-downloads install_coops_python.py
     - uses: actions/upload-artifact@v2
       with:
-        name: python-menu.exe
-        path: dist\install_coops_python.exe
+        name: install_coops_python.exe
+        path: host_make.dist\install_coops_python.exe
     - name: release
       uses: actions/create-release@v1
       id: create_release
@@ -44,6 +44,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: dist\install_coops_python.exe
-        asset_name: install_coops_python.exe
+        asset_path: host_make.dist\install_coops_python.exe
+        asset_name: host_make.exe
         asset_content_type: application/exe
