--- a/.github/workflows/nuitka.yml
+++ b/.github/workflows/nuitka.yml
@@ -23,11 +23,11 @@ jobs:
         pip install nuitka
     - name: build with nuitka
       run: |
-        python -m nuitka --mingw64 --standalone --onefile --windows-disable-console --assume-yes-for-downloads --enable-plugin=tk-inter install_coops_python.py
+        python -m nuitka --mingw64 --windows-disable-console --assume-yes-for-downloads --enable-plugin=tk-inter --onefile install_coops_python.py
     - uses: actions/upload-artifact@v2
       with:
         name: install_coops_python.exe
-        path: install_coops_python.dist\install_coops_python.exe
+        path: install_coops_python.exe
     - name: release
       uses: actions/create-release@v1
       id: create_release
@@ -44,6 +44,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: install_coops_python.dist\install_coops_python.exe
+        asset_path: install_coops_python.exe
         asset_name: install_coops_python.exe
         asset_content_type: application/exe
