--- a/.github/workflows/nuitka.yml
+++ b/.github/workflows/nuitka.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install nuitka
+        pip install nuitka pip zstandard ordered-set
     - name: build with nuitka
       run: |
         python -m nuitka --mingw64 --windows-disable-console --assume-yes-for-downloads --enable-plugin=tk-inter --onefile install_coops_python.py
